re PR rtl-optimization/64557 (get_addr in true_dependence_1 cannot handle VALUE inside an expr)

2015-01-22  Wei Mi  <wmi@google.com>

        PR rtl-optimization/64557
        * dse.c (record_store): Call get_addr for mem_addr.
        (check_mem_read_rtx): Likewise.

From-SVN: r220010